--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@
     min-height: 100vh;
     justify-content: center;
     align-items: center;
-    background: url(images/bg.jpg) no-repeat;
+    background: url('/images/bg.jpg') no-repeat;
     background-position: center center;
     background-size: cover;
   }
